--- a/documentation/trql.customer.class.php.html
+++ b/documentation/trql.customer.class.php.html
@@ -50,13 +50,13 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <section class="header">
 <span class="DocumentorLabel">Filename: </span><span class="property filename">trql.customer.class.php</span>
 <span class="DocumentorLabel">Namespace: </span><span class="property namespace"><code>trql\quitus</code></span>
-<span class="DocumentorLabel">Class aliases: </span><span class="property aliases"><code>\trql\vaesoli\Vaesoli as Vaesoli,\trql\organization\PersonOrOrganization as PersonOrOrganization,DOMDocument; use DOMXPath; if ( ! defined( 'MOTHER_ABSTRACT_CLASS' ) ) require_once( 'trql.mother.cl as s</code></span>
+<span class="DocumentorLabel">Class aliases: </span><span class="property aliases"><code>\trql\vaesoli\Vaesoli as Vaesoli,\trql\quitus\PersonOrOrganization as PersonOrOrganization,DOMDocument; use DOMXPath; if ( ! defined( 'MOTHER_ABSTRACT_CLASS' ) ) require_once( 'trql.mother.cl as s</code></span>
 <span class="DocumentorLabel">Purpose: </span><span class="property purpose">recipient of a good, service, product or idea obtained from 
  a seller via a financial transaction</span>
 <span class="DocumentorLabel">Author: </span><span class="property author">Pat Y. Boens</span>
 <span class="DocumentorLabel">Company: </span><span class="property company">Lato Sensu Management<br />Rue du Bois des Mazuis, 47<br />5070 Vitrival<br />Belgium<br /><a href="https://www.latosensu.be" class="DocumentorLink" title="Go to https://www.latosensu.be" itemprop="url">https://www.latosensu.be</a> (geonames: <a href="http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" class="DocumentorLink" title="Go to http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" itemprop="url">http://api.geonames.org/get?geonameId=8520400&username=demo&style=full</a>)<br />Vae Soli!: <a href="http://www.vaesoli.com" class="DocumentorLink" title="Go to http://www.vaesoli.com" itemprop="url">http://www.vaesoli.com</a><br /></span>
 <span class="DocumentorLabel">Creation date: </span><span class="property cdate">28-08-2020 14:09</span>
-<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">19/03/2021 - 15:26:33</span>
+<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">20/03/2021 - 15:42:42</span>
 <span class="DocumentorLabel">License/Copyrights: </span><span class="property license">Intellectual Property belongs to Pat Y. Boens. You are free to:<br /><br /><strong>Share</strong> — copy and redistribute the material in any medium or format<br /><strong>Adapt</strong> — remix, transform, and build upon the material for any purpose, even commercially.<br /><br />Under the following terms:<br /><br /><strong>Attribution</strong> — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.<br /><br /><strong>No additional restrictions</strong> — You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.<br /><br /><a href="https://creativecommons.org/licenses/by/4.0/legalcode" class="DocumentorLink" title="Go to https://creativecommons.org/licenses/by/4.0/legalcode" itemprop="url">https://creativecommons.org/licenses/by/4.0/legalcode</a></span>
 </section> <!-- .header -->
 <section class="classes">
@@ -64,7 +64,7 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>Customer</code></span>
 <span class="DocumentorLabel">Description: </span><span class="property description">Recipient of a good, service, product or idea obtained from a seller via 
  a financial transaction</span>
-<span class="DocumentorLabel">Inheritance: </span><span class="property inheritance"><code><a href="?src=Mother">Mother</a> &gt; <a href="?src=Thing">Thing</a> &gt; <a href="?src=PersonOrOrganization">PersonOrOrganization</a> &gt; Customer</code></span>
+<span class="DocumentorLabel">Inheritance: </span><span class="property inheritance"><code><a href="?src=Mother">Mother</a> &gt; <a href="?src=Thing">Thing</a> &gt; <a href="?src=Subject">Subject</a> &gt; <a href="?src=PersonOrOrganization">PersonOrOrganization</a> &gt; Customer</code></span>
 <span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class Customer extends PersonOrOrganization</code></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
@@ -604,8 +604,10 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <tr class="property">
 <td class="name" id="var.wikidataId"><code>$wikidataId</code></td>
 <td class="type"><code>string</code></td>
-<td class="description">WikidataId ... entity ... a thing with independent and 
- distinct existence</td>
+<td class="description">Wikidata ID. Being who has a unique consciousness and/or 
+ unique personal experiences, or an entity that has a 
+ relationship with another entity that exists outside 
+ of itself</td>
 </tr>
 <tr class="property">
 <td class="name" id="var.workLocation"><code>$workLocation</code></td>
