--- a/documentation/trql.mailshot.class.php.html
+++ b/documentation/trql.mailshot.class.php.html
@@ -48,26 +48,26 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 
 <div class="trql_documentor_DocumentorSourceFile">
 <section class="header">
-<span class="DocumentorLabel">Filename: </span><span class="property filename">trql.ledger.class.php</span>
-<span class="DocumentorLabel">Namespace: </span><span class="property namespace"><code>trql\ledger</code></span>
-<span class="DocumentorLabel">Class aliases: </span><span class="property aliases"><code>\trql\vaesoli\Vaesoli as v,\trql\accountingregister\AccountingRegister as AccountingRegister</code></span>
-<span class="DocumentorLabel">Purpose: </span><span class="property purpose">A ledger is the principal book or computer file for recording
- and totaling economic transactions measured in terms of a
- monetary unit of account by account type, with debits and
- credits in separate columns and a beginning monetary balance
- and ending monetary balance for each account.</span>
+<span class="DocumentorLabel">Filename: </span><span class="property filename">trql.mailshot.class.php</span>
+<span class="DocumentorLabel">Namespace: </span><span class="property namespace"><code>trql\quitus</code></span>
+<span class="DocumentorLabel">Class aliases: </span><span class="property aliases"><code>\trql\vaesoli\Vaesoli as Vaesoli,\trql\quitus\Advertizing as Advertizing</code></span>
+<span class="DocumentorLabel">Purpose: </span><span class="property purpose">sending mass mailings</span>
 <span class="DocumentorLabel">Author: </span><span class="property author">Pat Y. Boens</span>
 <span class="DocumentorLabel">Company: </span><span class="property company">Lato Sensu Management<br />Rue du Bois des Mazuis, 47<br />5070 Vitrival<br />Belgium<br /><a href="https://www.latosensu.be" class="DocumentorLink" title="Go to https://www.latosensu.be" itemprop="url">https://www.latosensu.be</a> (geonames: <a href="http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" class="DocumentorLink" title="Go to http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" itemprop="url">http://api.geonames.org/get?geonameId=8520400&username=demo&style=full</a>)<br />Vae Soli!: <a href="http://www.vaesoli.com" class="DocumentorLink" title="Go to http://www.vaesoli.com" itemprop="url">http://www.vaesoli.com</a><br /></span>
-<span class="DocumentorLabel">Creation date: </span><span class="property cdate">18-02-21 11:06</span>
-<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">20/03/2021 - 22:16:12</span>
+<span class="DocumentorLabel">Creation date: </span><span class="property cdate">20-03-21 15:12</span>
+<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">20/03/2021 - 22:09:16</span>
 <span class="DocumentorLabel">License/Copyrights: </span><span class="property license">Intellectual Property belongs to Pat Y. Boens. You are free to:<br /><br /><strong>Share</strong> — copy and redistribute the material in any medium or format<br /><strong>Adapt</strong> — remix, transform, and build upon the material for any purpose, even commercially.<br /><br />Under the following terms:<br /><br /><strong>Attribution</strong> — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.<br /><br /><strong>No additional restrictions</strong> — You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.<br /><br /><a href="https://creativecommons.org/licenses/by/4.0/legalcode" class="DocumentorLink" title="Go to https://creativecommons.org/licenses/by/4.0/legalcode" itemprop="url">https://creativecommons.org/licenses/by/4.0/legalcode</a></span>
 </section> <!-- .header -->
 <section class="classes">
 <section class="class shadow">
-<span class="DocumentorLabel">Class: </span><span class="property classname"><code>Ledger</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">Principal book or computer file for recording and totaling economic transactions</span>
-<span class="DocumentorLabel">Inheritance: </span><span class="property inheritance"><code><a href="?src=Mother">Mother</a> &gt; <a href="?src=Thing">Thing</a> &gt; <a href="?src=CreativeWork">CreativeWork</a> &gt; <a href="?src=WrittenWork">WrittenWork</a> &gt; <a href="?src=Document">Document</a> &gt; <a href="?src=AccountingRegister">AccountingRegister</a> &gt; Ledger</code></span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class Ledger extends AccountingRegister</code></span>
+<span class="DocumentorLabel">Class: </span><span class="property classname"><code>Mailshot</code></span>
+<span class="DocumentorLabel">Description: </span><span class="property description">Sending mass mailings.</span>
+<span class="DocumentorLabel">Inheritance: </span><span class="property inheritance"><code><a href="?src=Mother">Mother</a> &gt; <a href="?src=Thing">Thing</a> &gt; <a href="?src=CreativeWork">CreativeWork</a> &gt; <a href="?src=Advertizing">Advertizing</a> &gt; Mailshot</code></span>
+<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class Mailshot extends Advertizing</code></span>
+<span class="DocumentorLabel">TODOs: </span><span class="property todo">Each class of TRQL Labs should bear a unique ID that should be
+
+ 1) published on UIKey
+ 2) mentioned on wikidata</span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -388,14 +388,6 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <td class="description">Genre of the creative work, broadcast channel or group.</td>
 </tr>
 <tr class="property">
-<td class="name" id="var.hasDigitalDocumentPermission"><code>$hasDigitalDocumentPermission</code></td>
-<td class="type"><code>DigitalDocumentPermission</code></td>
-<td class="description">A permission related to the access to this document (e.g. permission
- to read or write an electronic document). For a public document,
- specify a grantee with an Audience with audienceType equal to
- "public".</td>
-</tr>
-<tr class="property">
 <td class="name" id="var.hasPart"><code>$hasPart</code></td>
 <td class="type"><code>CreativeWork</code></td>
 <td class="description">Indicates an item or <code><a href="?src=CreativeWork">CreativeWork</a></code> that is part of this item,
@@ -694,11 +686,6 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
  Inverse property: <code><a href="#var-about">$about</a></code>.</td>
 </tr>
 <tr class="property">
-<td class="name" id="var.szStorage"><code>$szStorage</code></td>
-<td class="type"><code>string</code></td>
-<td class="description">Physical storage (persitence layer)</td>
-</tr>
-<tr class="property">
 <td class="name" id="var.temporal"><code>$temporal</code></td>
 <td class="type"><code>DateTime|string</code></td>
 <td class="description">The "temporal" property can be used in cases where more specific
@@ -777,8 +764,7 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <tr class="property">
 <td class="name" id="var.wikidataId"><code>$wikidataId</code></td>
 <td class="type"><code>string</code></td>
-<td class="description">Wikidata ID. Principal book or computer file
- for recording and totaling economic transactions</td>
+<td class="description">Wikidata ID. Sending mass mailings</td>
 </tr>
 <tr class="property">
 <td class="name" id="var.workExample"><code>$workExample</code></td>
@@ -796,10 +782,12 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
  Inverse property: <code><a href="#var-translationOfWork">$translationOfWork</a></code>.</td>
 </tr>
 </table>
-<h2 class="DocumentorLabel">Methods of <code>Ledger</code></h2>
+<h2 class="DocumentorLabel">Methods of <code>Mailshot</code></h2>
 <p class="property func" id="fnc.__construct"><span class="name"><strong><code>__construct()</code></strong></span>: Class constructor</p>
+<p class="property">Keywords:</p>
+<p>constructors, destructors</p>
 <p class="property">Syntax:</p>
-<p><code>__construct( $szFolder )</code></p>
+<p><code>__construct( $szHome )</code></p>
 <span class="DocumentorLabel">Parameters: </span>
 <table class="properties">
 <thead>
@@ -810,89 +798,22 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 </tr>
 </thead>
 <tr class="parameter">
-<td class="name" id="param.__construct.szID"><code>$szID</code></td>
+<td class="name" id="param.__construct.szHome"><code>$szHome</code></td>
 <td class="type"><code>string</code></td>
-<td class="description seealso">The ID of the ledger (often, the ID of an account).</td>
-</tr>
-<tr class="parameter">
-<td class="name" id="param.__construct.szFolder"><code>$szFolder</code></td>
-<td class="type"><code>string</code></td>
-<td class="description seealso">Persistence folder of the ledger.</td>
+<td class="description seealso">Home of the class. Optional.</td>
 </tr>
 </table>
 <p class="property return">Return:</p>
 <p class="seealso">(self):  The current instance of the class</p>
+<span class="DocumentorLabel">See also: </span><span class="property seealso"><code><a href="#fnc.__destruct">__destruct()</a></code></span>
 <hr /><p class="property func" id="fnc.__destruct"><span class="name"><strong><code>__destruct()</code></strong></span>: Class destructor</p>
+<p class="property">Keywords:</p>
+<p>constructors, destructors</p>
 <p class="property">Syntax:</p>
 <p><code>__destruct()</code></p>
 <p class="property return">Return:</p>
 <p class="seealso">(void):  No return</p>
-<hr /><p class="property func" id="fnc.append"><span class="name"><strong><code>append()</code></strong></span>: Appends an entry in the ledger</p>
-<p class="property">Syntax:</p>
-<p><code>append( $szText )</code></p>
-<span class="DocumentorLabel">Parameters: </span>
-<table class="properties">
-<thead>
-<tr>
-<th class="name">Name</th>
-<th class="type">Type</th>
-<th class="description">Description</th>
-</tr>
-</thead>
-<tr class="parameter">
-<td class="name" id="param.append.szText"><code>$szText</code></td>
-<td class="type"><code>string</code></td>
-<td class="description seealso">The text that must be appended to the ledger</td>
-</tr>
-</table>
-<p class="property return">Return:</p>
-<p class="seealso">(bool):  <code>true</code> if @param.szText was successfully appended to the
- ledger persistence.</p>
-<hr /><p class="property func" id="fnc.ledgerFile"><span class="name"><strong><code>ledgerFile()</code></strong></span>: Get the normalized "ledger" filename (persistence layer)</p>
-<p class="property">Syntax:</p>
-<p><code>ledgerFile( $szFolder )</code></p>
-<span class="DocumentorLabel">Parameters: </span>
-<table class="properties">
-<thead>
-<tr>
-<th class="name">Name</th>
-<th class="type">Type</th>
-<th class="description">Description</th>
-</tr>
-</thead>
-<tr class="parameter">
-<td class="name" id="param.ledgerFile.szFolder"><code>$szFolder</code></td>
-<td class="type"><code>string</code></td>
-<td class="description seealso">The folder where the ledger file is located.</td>
-</tr>
-</table>
-<p class="property return">Return:</p>
-<p class="seealso">(string):  The name of the "ledger" file</p>
-<hr /><p class="property func" id="fnc.log"><span class="name"><strong><code>log()</code></strong></span>: Class destructor</p>
-<p class="property">Syntax:</p>
-<p><code>log( $fAmount )</code></p>
-<span class="DocumentorLabel">Parameters: </span>
-<table class="properties">
-<thead>
-<tr>
-<th class="name">Name</th>
-<th class="type">Type</th>
-<th class="description">Description</th>
-</tr>
-</thead>
-<tr class="parameter">
-<td class="name" id="param.log.szOperation"><code>$szOperation</code></td>
-<td class="type"><code>string</code></td>
-<td class="description seealso">The operation that must be logged (non-structured)</td>
-</tr>
-<tr class="parameter">
-<td class="name" id="param.log.fAmount"><code>$fAmount</code></td>
-<td class="type"><code>float</code></td>
-<td class="description seealso">The amount involved in @param.szOperation</td>
-</tr>
-</table>
-<p class="property return">Return:</p>
-<p class="seealso">(self):  The ledger object</p>
+<span class="DocumentorLabel">See also: </span><span class="property seealso"><code><a href="#fnc.__construct">__construct()</a></code></span>
 <hr /></section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
