--- a/documentation/trql.personororganization.class.php.html
+++ b/documentation/trql.personororganization.class.php.html
@@ -49,22 +49,21 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <div class="trql_documentor_DocumentorSourceFile">
 <section class="header">
 <span class="DocumentorLabel">Filename: </span><span class="property filename">trql.personororganization.class.php</span>
-<span class="DocumentorLabel">Namespace: </span><span class="property namespace"><code>trql\organization</code></span>
-<span class="DocumentorLabel">Class aliases: </span><span class="property aliases"><code>\trql\mother\iContext as iContext,\trql\vaesoli\Vaesoli as Vaesoli,\trql\organization\Organization as Organization,\trql\thing\Thing as Thing</code></span>
+<span class="DocumentorLabel">Namespace: </span><span class="property namespace"><code>trql\quitus</code></span>
+<span class="DocumentorLabel">Class aliases: </span><span class="property aliases"><code>\trql\mother\iContext as iContext,\trql\vaesoli\Vaesoli as Vaesoli,\trql\quitus\Subject as Subject,= null; public $weight = null; public $workLocation = null; public $worksFor = null; public $wikidataId = null; public function __construct( $szHome = null ) { parent::__construct(); $this->updateSelf( __CLASS__,'/q/common/trql.cl as ses</code></span>
 <span class="DocumentorLabel">Purpose: </span><span class="property purpose">A combination of Person and Organization</span>
 <span class="DocumentorLabel">Author: </span><span class="property author">Pat Y. Boens</span>
 <span class="DocumentorLabel">Company: </span><span class="property company">Lato Sensu Management<br />Rue du Bois des Mazuis, 47<br />5070 Vitrival<br />Belgium<br /><a href="https://www.latosensu.be" class="DocumentorLink" title="Go to https://www.latosensu.be" itemprop="url">https://www.latosensu.be</a> (geonames: <a href="http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" class="DocumentorLink" title="Go to http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" itemprop="url">http://api.geonames.org/get?geonameId=8520400&username=demo&style=full</a>)<br />Vae Soli!: <a href="http://www.vaesoli.com" class="DocumentorLink" title="Go to http://www.vaesoli.com" itemprop="url">http://www.vaesoli.com</a><br /></span>
 <span class="DocumentorLabel">Creation date: </span><span class="property cdate">28-08-2020 14:09</span>
-<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">19/03/2021 - 15:51:21</span>
+<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">20/03/2021 - 15:44:41</span>
 <span class="DocumentorLabel">License/Copyrights: </span><span class="property license">Intellectual Property belongs to Pat Y. Boens. You are free to:<br /><br /><strong>Share</strong> — copy and redistribute the material in any medium or format<br /><strong>Adapt</strong> — remix, transform, and build upon the material for any purpose, even commercially.<br /><br />Under the following terms:<br /><br /><strong>Attribution</strong> — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.<br /><br /><strong>No additional restrictions</strong> — You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.<br /><br /><a href="https://creativecommons.org/licenses/by/4.0/legalcode" class="DocumentorLink" title="Go to https://creativecommons.org/licenses/by/4.0/legalcode" itemprop="url">https://creativecommons.org/licenses/by/4.0/legalcode</a></span>
 </section> <!-- .header -->
 <section class="classes">
 <section class="class shadow">
 <span class="DocumentorLabel">Class: </span><span class="property classname"><code>PersonOrOrganization</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">Abstract class to mention a Person or an Organization</span>
-<span class="DocumentorLabel">Inheritance: </span><span class="property inheritance"><code><a href="?src=Mother">Mother</a> &gt; <a href="?src=Thing">Thing</a> &gt; PersonOrOrganization</code></span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class PersonOrOrganization extends Thing</code></span>
-<span class="DocumentorLabel">TODOs: </span><span class="property todo">Weird error : Organization seems to be unknown!!!</span>
+<span class="DocumentorLabel">Description: </span><span class="property description">Class to mention a Person or an Organization</span>
+<span class="DocumentorLabel">Inheritance: </span><span class="property inheritance"><code><a href="?src=Mother">Mother</a> &gt; <a href="?src=Thing">Thing</a> &gt; <a href="?src=Subject">Subject</a> &gt; PersonOrOrganization</code></span>
+<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class PersonOrOrganization extends Subject</code></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -603,8 +602,10 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <tr class="property">
 <td class="name" id="var.wikidataId"><code>$wikidataId</code></td>
 <td class="type"><code>string</code></td>
-<td class="description">WikidataId ... entity ... a thing with independent and 
- distinct existence</td>
+<td class="description">Wikidata ID. Being who has a unique consciousness and/or 
+ unique personal experiences, or an entity that has a 
+ relationship with another entity that exists outside 
+ of itself</td>
 </tr>
 <tr class="property">
 <td class="name" id="var.workLocation"><code>$workLocation</code></td>
@@ -642,13 +643,10 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <p class="seealso">(self):  The current instance of the class</p>
 <span class="DocumentorLabel">See also: </span><span class="property seealso"><code><a href="#fnc.__destruct">__destruct()</a></code></span>
 <hr /><p class="property func" id="fnc.__destruct"><span class="name"><strong><code>__destruct()</code></strong></span>: Class destructor</p>
-<p class="property">Keywords:</p>
-<p>constructors, destructors</p>
 <p class="property">Syntax:</p>
 <p><code>__destruct()</code></p>
 <p class="property return">Return:</p>
 <p class="seealso">(void):  No return</p>
-<span class="DocumentorLabel">See also: </span><span class="property seealso"><code><a href="#fnc.__construct">__construct()</a></code></span>
 <hr /></section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
