--- a/documentation/trql.recipient.class.php.html
+++ b/documentation/trql.recipient.class.php.html
@@ -48,24 +48,23 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 
 <div class="trql_documentor_DocumentorSourceFile">
 <section class="header">
-<span class="DocumentorLabel">Filename: </span><span class="property filename">trql.member.class.php</span>
+<span class="DocumentorLabel">Filename: </span><span class="property filename">trql.recipient.class.php</span>
 <span class="DocumentorLabel">Namespace: </span><span class="property namespace"><code>trql\quitus</code></span>
-<span class="DocumentorLabel">Class aliases: </span><span class="property aliases"><code>\trql\mother\iContext as iContext,\trql\vaesoli\Vaesoli as Vaesoli,\trql\quitus\PersonOrOrganization as PersonOrOrganization,DOMDocument; use DOMXPath; if ( ! defined( 'MOTHER_ABSTRACT_CLASS' ) ) require_once( 'trql.mother.cl as s</code></span>
-<span class="DocumentorLabel">Purpose: </span><span class="property purpose">Individual or organization with membership in a group; 
- constitutive components of a corporate body</span>
+<span class="DocumentorLabel">Class aliases: </span><span class="property aliases"><code>\trql\vaesoli\Vaesoli as Vaesoli,\trql\quitus\PersonOrOrganization as PersonOrOrganization</code></span>
+<span class="DocumentorLabel">Purpose: </span><span class="property purpose">Person or organization to whom a information, letter or 
+ note is addressed</span>
 <span class="DocumentorLabel">Author: </span><span class="property author">Pat Y. Boens</span>
 <span class="DocumentorLabel">Company: </span><span class="property company">Lato Sensu Management<br />Rue du Bois des Mazuis, 47<br />5070 Vitrival<br />Belgium<br /><a href="https://www.latosensu.be" class="DocumentorLink" title="Go to https://www.latosensu.be" itemprop="url">https://www.latosensu.be</a> (geonames: <a href="http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" class="DocumentorLink" title="Go to http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" itemprop="url">http://api.geonames.org/get?geonameId=8520400&username=demo&style=full</a>)<br />Vae Soli!: <a href="http://www.vaesoli.com" class="DocumentorLink" title="Go to http://www.vaesoli.com" itemprop="url">http://www.vaesoli.com</a><br /></span>
-<span class="DocumentorLabel">Creation date: </span><span class="property cdate">28-08-2020 14:09</span>
-<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">20/03/2021 - 15:46:15</span>
+<span class="DocumentorLabel">Creation date: </span><span class="property cdate">20-03-21 22:06</span>
+<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">20/03/2021 - 22:07:04</span>
 <span class="DocumentorLabel">License/Copyrights: </span><span class="property license">Intellectual Property belongs to Pat Y. Boens. You are free to:<br /><br /><strong>Share</strong> — copy and redistribute the material in any medium or format<br /><strong>Adapt</strong> — remix, transform, and build upon the material for any purpose, even commercially.<br /><br />Under the following terms:<br /><br /><strong>Attribution</strong> — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.<br /><br /><strong>No additional restrictions</strong> — You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.<br /><br /><a href="https://creativecommons.org/licenses/by/4.0/legalcode" class="DocumentorLink" title="Go to https://creativecommons.org/licenses/by/4.0/legalcode" itemprop="url">https://creativecommons.org/licenses/by/4.0/legalcode</a></span>
 </section> <!-- .header -->
 <section class="classes">
 <section class="class shadow">
-<span class="DocumentorLabel">Class: </span><span class="property classname"><code>Member</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description">Individual or organization with membership in a group; constitutive 
- components of a corporate body</span>
-<span class="DocumentorLabel">Inheritance: </span><span class="property inheritance"><code><a href="?src=Mother">Mother</a> &gt; <a href="?src=Thing">Thing</a> &gt; <a href="?src=Subject">Subject</a> &gt; <a href="?src=PersonOrOrganization">PersonOrOrganization</a> &gt; Member</code></span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class Member extends PersonOrOrganization</code></span>
+<span class="DocumentorLabel">Class: </span><span class="property classname"><code>Recipient</code></span>
+<span class="DocumentorLabel">Description: </span><span class="property description"></span>
+<span class="DocumentorLabel">Inheritance: </span><span class="property inheritance"><code><a href="?src=Mother">Mother</a> &gt; <a href="?src=Thing">Thing</a> &gt; <a href="?src=Subject">Subject</a> &gt; <a href="?src=PersonOrOrganization">PersonOrOrganization</a> &gt; Recipient</code></span>
+<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class Recipient extends PersonOrOrganization</code></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -604,8 +603,8 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <tr class="property">
 <td class="name" id="var.wikidataId"><code>$wikidataId</code></td>
 <td class="type"><code>string</code></td>
-<td class="description">Wikidata ID. Individual or organization with membership 
- in a group; constitutive components of a corporate body</td>
+<td class="description">Wikidata ID. Addressee ... Person or organization 
+ to whom a information, letter or note is addressed</td>
 </tr>
 <tr class="property">
 <td class="name" id="var.workLocation"><code>$workLocation</code></td>
@@ -618,8 +617,10 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <td class="description">Organizations that the person works for.</td>
 </tr>
 </table>
-<h2 class="DocumentorLabel">Methods of <code>Member</code></h2>
+<h2 class="DocumentorLabel">Methods of <code>Recipient</code></h2>
 <p class="property func" id="fnc.__construct"><span class="name"><strong><code>__construct()</code></strong></span>: Class constructor</p>
+<p class="property">Keywords:</p>
+<p>constructors, destructors</p>
 <p class="property">Syntax:</p>
 <p><code>__construct( $szHome )</code></p>
 <span class="DocumentorLabel">Parameters: </span>
@@ -639,11 +640,15 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 </table>
 <p class="property return">Return:</p>
 <p class="seealso">(self):  The current instance of the class</p>
+<span class="DocumentorLabel">See also: </span><span class="property seealso"><code><a href="#fnc.__destruct">__destruct()</a></code></span>
 <hr /><p class="property func" id="fnc.__destruct"><span class="name"><strong><code>__destruct()</code></strong></span>: Class destructor</p>
+<p class="property">Keywords:</p>
+<p>constructors, destructors</p>
 <p class="property">Syntax:</p>
 <p><code>__destruct()</code></p>
 <p class="property return">Return:</p>
 <p class="seealso">(void):  No return</p>
+<span class="DocumentorLabel">See also: </span><span class="property seealso"><code><a href="#fnc.__construct">__construct()</a></code></span>
 <hr /></section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
